# ClangTidyCrossCompileDemo

./: .clang-tidy  CMakeLists.txt  README.md  arm-poky-cortexa9.cmake  compile_commands-gcc5.4-host.json  compile_commands-msvc-19.10.json  compile_commands-poky.json
src/: main.cc
